Added border and another text

--- a/text.html
+++ b/text.html
@@ -4,8 +4,8 @@
 
 
 <body>
-    <p><h1>The quick brown fox jumps over the lazy dog</p></h1>
-
+    <p><div>The quick brown fox jumps over the lazy dog</p></div>
+    <p><div>Username: JJCL</div></p>
 </head>
 </body>
 </html>
