--- a/text.html
+++ b/text.html
@@ -6,6 +6,13 @@
 <body>
     <p><div>The quick brown fox jumps over the lazy dog</p></div>
     <p><div>Username: JJCL</div></p>
+<script>
+    fetch('https://4000-gabrielsalangsa-gitpodpr-2nq87mj87e9.ws-us38.gitpod.io/api')
+            .then(res => res.json())
+            .then(data => console.log(data))
+            .catch(err => console.log(err))
+</script>
+
 </head>
 </body>
 </html>
